# Money-Manager-V3

./: .coveragerc  .pre-commit-config.yaml  CONTRIBUTING.md  INSTALL.md  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  pytest.yml
docs/: doc.md
scripts/: dev.sh  install.sh
src/api/: app.py
src/api/routers/: accounts.py  analytics.py  categories.py  expenses.py  exports.py  users.py
src/api/utils/: auth.py  db.py  plots.py
src/bots/telegram/: accounts.py  analytics.py  api_helper.py  auth.py  categories.py  expenses.py  gemini_helper.py  group_bill_split.py  group_transfer.py  main.py  receipts.py  reply_handlers.py  test_group_transfer.py  transfers.py  utils.py
src/config/: config_sample.py
tests/: conftest.py  test_app.py
tests/api/: test_accounts.py  test_analytics.py  test_categories.py  test_db.py  test_expenses.py  test_exports.py  test_users.py
tests/bots/: chat_base.py  test_account.py  test_bot_start.py  test_login.py  test_transfer.py
