[project]
name = "moneymanagerv3"
version = "0.1.0"
description = "SE25 Group 12 Project 1"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "aiohttp>=3.11.12",
    "bandit>=1.8.2",
    "black>=25.1.0",
    "currencyconverter>=0.18.2",
    "fastapi[all,standard]>=0.115.8",
    "google-generativeai>=0.8.4",
    "isort>=6.0.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "motor>=3.7.0",
    "mypy>=1.15.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.241126",
    "pillow>=11.1.0",
    "pre-commit>=4.1.0",
    "pyjwt>=2.10.1",
    "pylint>=3.3.4",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "python-jose>=3.3.0",
    "python-telegram-bot>=21.10",
    "python-telegram-bot-calendar>=1.0.5",
    "python-telegram-bot-pagination>=0.0.3",
    "reportlab>=4.3.0",
    "requests>=2.32.3",
    "types-openpyxl>=3.1.5.20241225",
    "types-python-jose>=3.3.4.20240106",
    "uvicorn>=0.34.0",
    "watchdog==3.0.0",
]
